--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,15 @@ project(Edmonds-Karp-Algorithm)
 
 set(CMAKE_CXX_FLAGS "-Wall")
 
-set (input01 "test_graph.txt")
-set (input02 "")
-set (input03 "")
-foreach(file IN LISTS input01 input02 input03)
+set (input01 "graph1.txt")
+set (input02 "graph2.txt")
+set (input03 "graph3.txt")
+set (input04 "graph4.txt")
+set (input05 "graph5.txt")
+foreach(file IN LISTS input01 input02 input03 input04 input05)
     configure_file(${file} ${file} COPYONLY)
 endforeach()
 
 set(CMAKE_CXX_STANDARD 14)
 include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/utils)
-add_executable(EdmondsKarp maximum_flow_algorithms.cpp main.cpp)
+add_executable(EdmondsKarp main.cpp)
